[package]
name = "pan_driver_rust"
version = "0.1.0"
edition = "2021"
authors = ["gb99"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "serial_to_midi_lib"
path = "src/lib.rs"

[[bin]]
name = "pan_driver"
path = "src/main.rs"

[dependencies]
config = "0.13.4"
midi-msg = "0.5.0"
midir = "0.9.1"
serialport = "4.3.0"
sysinfo = "0.30.5"
